# MOPSO-CPP

./: .gitmodules  CMakeLists.txt  README.md
include/: mopso.hpp  particle.hpp  repository.hpp
scripts/: build.ps1
src/: main.cpp
